[gd_scene load_steps=11 format=3 uid="uid://beomjuapytlt5"]

[ext_resource type="Script" path="res://entities/birdie.gd" id="1_2owsx"]
[ext_resource type="Texture2D" uid="uid://dx5owo86pt6wn" path="res://spritesheet/world.png" id="1_7rijw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2o8vy"]
atlas = ExtResource("1_7rijw")
region = Rect2(128, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_twhnq"]
atlas = ExtResource("1_7rijw")
region = Rect2(128, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ogsv"]
atlas = ExtResource("1_7rijw")
region = Rect2(128, 512, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_egm06"]
animations = [{
"frames": [SubResource("AtlasTexture_2o8vy")],
"loop": true,
"name": &"Default",
"speed": 5.0
}, {
"frames": [SubResource("AtlasTexture_twhnq"), SubResource("AtlasTexture_8ogsv")],
"loop": true,
"name": &"Flying",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_qynx1"]
resource_name = "Fly"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BirdieSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Flying"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BirdieSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1.62451, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1500, -1500)]
}

[sub_resource type="Animation" id="Animation_g3sk5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BirdieSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BirdieSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dlpgw"]
_data = {
"Fly": SubResource("Animation_qynx1"),
"RESET": SubResource("Animation_g3sk5")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_77db3"]
radius = 265.047

[node name="Birdie" type="StaticBody2D" groups=["world_entities"]]
position = Vector2(1000, -1000)
z_index = 1
collision_layer = 4
script = ExtResource("1_2owsx")

[node name="BirdieSprite" type="AnimatedSprite2D" parent="."]
frames = SubResource("SpriteFrames_egm06")
animation = &"Flying"

[node name="BirdieCollisionBox" type="CollisionPolygon2D" parent="."]
position = Vector2(-1, 1)
polygon = PackedVector2Array(6, -11, -9, 1, -8, 11, 0, 15, 8, 13, 12, 8, 12, 3, 17, -1, 15, -5, 12, -10)

[node name="AwareTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_dlpgw")
}

[node name="BirdieAwareBox" type="Area2D" parent="."]
collision_mask = 2

[node name="BirdieAwareCollision" type="CollisionShape2D" parent="BirdieAwareBox"]
shape = SubResource("CircleShape2D_77db3")

[connection signal="timeout" from="AwareTimer" to="." method="_on_aware_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="BirdieAwareBox" to="." method="_on_birdie_aware_box_body_entered"]
